[package]
name = "beatsync-proto-backend"
version = "0.1.0"
authors = ["Florian Liesegang <lysigk@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
